[gd_scene load_steps=7 format=3 uid="uid://c14gxuhmro3d5"]

[ext_resource type="Script" uid="uid://bdcprmc30kaw6" path="res://src/menu/game_over.gd" id="1_m6r40"]
[ext_resource type="FontFile" uid="uid://djodagq044sqa" path="res://assets/fonts/nandaka-western.regular.ttf" id="2_u6166"]

[sub_resource type="LabelSettings" id="LabelSettings_o2c2l"]
font = ExtResource("2_u6166")
font_size = 72
font_color = Color(0.999998, 0.468621, 0.479272, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_o2c2l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u6166"]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector2(0, 480), Vector2(0, 480), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2c2l"]
_data = {
&"RESET": SubResource("Animation_o2c2l"),
&"enter": SubResource("Animation_u6166")
}

[node name="GameOver" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)
script = ExtResource("1_m6r40")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "GAME
OVER"
label_settings = SubResource("LabelSettings_o2c2l")
horizontal_alignment = 1

[node name="ScoreText" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 80)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_u6166")
text = "Final Score: 0
Highest Chain: 0

New High Score! Previous: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u6166")
theme_override_font_sizes/font_size = 22
text = "Play Again"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u6166")
theme_override_font_sizes/font_size = 22
text = "Quit to Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o2c2l")
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/MenuButton" to="." method="_on_menu_button_pressed"]
